# orca

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: agent-deck-interface.md  backends.md  bug-newlines-research.md  code-review-2026-03-01.md  code-review.md  design.md  ios-companion-app.md  opencode-cloudflare-plan.md  research.md  roadmap.md  terminal-embedding-research.md  todo.md
src/: App.tsx  analytics.ts  main.tsx  queryKeys.test.ts  queryKeys.ts  sentry.ts  styles.css  test-setup.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agentdeck.rs  claude_logs.rs  claude_remote.rs  command.rs  git.rs  github.rs  lib.rs  main.rs  models.rs  opencode_remote.rs  orca_db.rs  pty.rs  remote_common.rs  tmux.rs
src/components/: AboutDialog.tsx  AddSessionBar.tsx  AnalyticsPrompt.tsx  AppSettingsModal.tsx  CloseIssueButton.tsx  CreateGroupModal.tsx  CreatePrModal.tsx  DiffViewer.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GroupSettingsModal.tsx  IssueModal.tsx  LogViewer.tsx  MainSessionGhost.tsx  MessageStream.tsx  Modal.test.tsx  Modal.tsx  MoveSessionModal.tsx  PendingSessionCard.tsx  PrWorkflowActions.tsx  PrerequisiteCheck.tsx  RenameModal.tsx  SessionCard.tsx  SessionList.test.tsx  SessionList.tsx  ShortcutHelp.test.tsx  ShortcutHelp.tsx  Sidebar.tsx  TerminalView.tsx  TodoCard.tsx  TodoList.tsx  UpdateNotification.tsx  VersionWarning.tsx  WorktreeActions.tsx
src/hooks/: useDebouncedValue.test.ts  useEscapeKey.test.ts  useEscapeKey.ts  useKeyboardShortcuts.ts  usePrWorkflowActions.ts  useSessionCreation.ts  useSidebarResize.ts  useWorktreeActions.ts
