[package]
name = "orca"
version = "0.1.0"
description = "GUI for managing parallel Claude Code sessions"
authors = ["beaufour"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
