[package]
name = "orca"
version = "0.1.0"
description = "GUI for managing parallel Claude Code sessions"
authors = ["beaufour"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "orca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["rt"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
manual_let_else = "deny"
semicolon_if_nothing_returned = "deny"
redundant_closure_for_method_calls = "deny"
needless_pass_by_value = "allow"
